Update CategoryResource.java